<resources>
    <string name="app_name">SnapBilling</string>
    <string name="action_settings">Settings</string>
    <string name="checkout">Checkout</string>
    <string name="receive">Receive</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="offers">Offers</string>
    <string name="quick_add">Quick Add</string>
    <string name="complete">Complete</string>
    <string name="serial_no">Sl.</string>
    <string name="products">Products</string>
    <string name="search_product_hint">Search Products</string>
    <string name="bill_search_hint_memo">Type Customer Name or Number</string>
    <string name="bill_search_hint">Type Customer Name or Number or InvoiceID</string>
    <string name="quantity">Quantity</string>
    <string name="qty">Qty</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="rate">Rate</string>
    <string name="pp">PP</string>
    <string name="total">Total</string>
    <string name="total_bill">Total Bill</string>
    <string name="status">Status</string>
    <string name="delete">Delete</string>
    <string name="return_product">Return</string>
    <string name="editname_product">Edit Name</string>
    <string name="revenue">Revenue</string>
    <string name="basket_value">Avg. Basket Value</string>
    <string name="customer_footfall">Customer Foot Fall</string>
    <string name="returned_products">Returned Products</string>
    <string name="keypad_0">0</string>
    <string name="keypad_1">1</string>
    <string name="keypad_2">2</string>
    <string name="keypad_3">3</string>
    <string name="keypad_4">4</string>
    <string name="keypad_5">5</string>
    <string name="keypad_6">6</string>
    <string name="keypad_7">7</string>
    <string name="keypad_8">8</string>
    <string name="keypad_9">9</string>
    <string name="keypad_dot">.</string>
    <string name="keypad_enter">Enter</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="discount1">-2%</string>
    <string name="discount2">-5%</string>
    <string name="discount3">%</string>
    <string name="discount4">-8%</string>
    <string name="discount5">-10%</string>
    <string name="billno">Bill No :\u0020 </string>
    <string name="amount">Amount</string>
    <string name="items">Items</string>
    <string name="savings">Savings</string>
    <string name="discount">Discount</string>
    <string name="pay">Pay</string>
    <string name="payment">Payment</string>
    <string name="history">History</string>
    <string name="payment_amt">Payment Amount</string>
    <string name="cash_payment">Cash Payment :</string>
    <string name="payable">Payable</string>
    <string name="paid">Paid</string>
    <string name="delivery">Delivery</string>
    <string name="cash">Cash</string>
    <string name="credit">Credit</string>
    <string name="total_customers">Total Customers</string>
    <string name="total_due">Total Due</string>
    <string name="total_paid">Total Paid :</string>
    <string name="change">Change</string>
    <string name="default_cash">00</string>
    <string name="default_discount">00</string>
    <string name="invoice_no">Enter The Invoice No</string>
    <string name="lineitems">Line Items</string>
    <string name="billed_qty">Billed Qty</string>
    <string name="received_qty">Received Qty</string>
    <string name="expiry">Expiry</string>
    <string name="sales_price_two">Sales Price2</string>
    <string name="sales_price_three">Sales Price3</string>
    <string name="report">Report</string>
    <string name="saved">Saved</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="ty">Thank You!</string>
    <string name="cancel_bill">Cancel Bill?</string>
    <string name="alert_amount">Bill Amount exceeds 1 lakh ?</string>
    <string name="cancel_clear_bill">Cancel/Clear Bill</string>
    <string name="deliver_bill">Deliver Bill</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="print">Print</string>
    <string name="message">Message</string>
    <string name="mail">Mail</string>
    <string name="invoice">Invoice</string>
    <string name="vat">VAT</string>
    <string name="mrp">MRP</string>
    <string name="sp1">SP1</string>
    <string name="sp2">SP2</string>
    <string name="sp3">SP3</string>
    <string name="bills">Bills</string>
    <string name="customers">Customers</string>
    <string name="tabonly_mode">Tablet Only Mode</string>
    <string name="dualdisp_mode">Dual Display Mode</string>
    <string name="customer">Customer</string>
    <string name="dashboard">Dashboard</string>
    <string name="display">Display</string>
    <string name="customer_payment">Customers</string>
    <string name="phonenumber_hint">Type Name or Number</string>
    <string name="member_since">Member Since</string>
    <string name="credit_limit">Credit Limit</string>
    <string name="due">Due</string>
    <string name="money">Money</string>
    <string name="food">Food</string>
    <string name="home_care">Home Care</string>
    <string name="kitchen">Kitchen</string>
    <string name="bathroom">Bathroom</string>
    <string name="others">Others</string>
    <string name="summary">Summary</string>
    <string name="avg_visits_pm">Avg. Visits Per Month</string>
    <string name="avg_purchase_pm">Avg. Purchase Per Month</string>
    <string name="days_since_last_purchase">Days Since Last Purchase</string>
    <string name="charts">Charts</string>
    <string name="alerts">Alerts</string>
    <string name="hot_prods">Hot Products</string>
    <string name="calc">Calculator</string>
    <string name="total_salse">Total Sales</string>
    <string name="opening_cash">Opening Cash</string>
    <string name="paid_purchase">Paid Purchase</string>
    <string name="cash_in_reg">Cash in Register</string>
    <string name="bills_made">Bills Made</string>
    <string name="avg_basket_size">Avg. Basket Size</string>
    <string name="avg_basket_value">Avg. Basket Value</string>
    <string name="footfall">Footfall</string>
    <string name="items_sold">Items Sold</string>
    <string name="items_returned">Items Returned</string>
    <string name="credit_given">Total Credit Due</string>
    <string name="store_visibility">Store Visibility</string>
    <string name="forgotten_products">Forgotten Products</string>
    <string name="suggested_products">Suggested Products</string>
    <string name="customer_name_hint">Customer Name</string>
    <string name="customer_number_hint">Customer Mobile Number</string>
    <string name="customer_address_hint">Customer Address</string>
    <string name="agency_name_hint">Agency Name</string>
    <string name="distributor_number_hint">Distributor Mobile Number</string>
    <string name="distributor_tin_hint">TIN Number</string>
    <string name="distributor_error_msg">Distributor already exist</string>
    <string name="position_tag">pos</string>
    <string name="customer_tag">customer</string>
    <string name="wrapper_tag">wrapper_tag</string>
    <string name="billfragment_tag">bill_fragment</string>
    <string name="visibilityfragment_tag">visibility_fragment</string>
    <string name="billhistoryfragment_tag">bill_history_fragment</string>
    <string name="storefragment_tag">store_fragment</string>
    <string name="monitorfragment_tag">billmonitor_fragment</string>
    <string name="splitscreenfragment_tag">splitscreen_fragment</string>
    <string name="customerpaymentfragment_tag">customerpayment_fragment</string>
    <string name="vat_summary_fragment_tag">vat_summary_fragment</string>
    <string name="customerpaymentfragment_bills_tag">customerpayment_bills_fragment</string>
    <string name="addeditfragment_tag">addedit_product_fragment</string>
    <string name="settingsfragment_current_printer">Click to change printer </string>
    <string name="settingsfragment_empty_printer">Click to change printer [No Printer Selected Currently]</string>
    <string name="summary_tag">summary_tag</string>
    <string name="charts_tag">charts_tag</string>
    <string name="alerts_tag">alerts_tag</string>
    <string name="hot_prods_tag">hot_prods_tag</string>
    <string name="calc_tag">calc_tag</string>
    <string name="money_tag">money_tag</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delivery">Are you sure you want to mark this bill as a delivery?</string>
    <string name="confirm_bill">Are you sure you want to mark this delivery as completed?</string>
    <string name="weight">Weight</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="weight_10g">10 gm</string>
    <string name="weight_20g">20 gm</string>
    <string name="weight_25g">25 gm</string>
    <string name="weight_50g">50 gm</string>
    <string name="weight_100g">100 gm</string>
    <string name="weight_200g">200 gm</string>
    <string name="weight_250g">250 gm</string>
    <string name="weight_500g">500 gm</string>
    <string name="weight_750g">750 gm</string>
    <string name="weight_1kg">1 Kg</string>
    <string name="weight_2kg">2 Kg</string>
    <string name="weight_3kg">3 Kg</string>
    <string name="weight_4kg">4 Kg</string>
    <string name="weight_5kg">5 Kg</string>
    <string name="weight_10kg">10 Kg</string>
    <string name="weight_15kg">15 Kg</string>
    <string name="weight_20kg">20 Kg</string>
    <string name="weight_25kg">25 Kg</string>
    <string name="weight_50kg">50 Kg</string>
    <string name="weight_10ml">10 ml</string>
    <string name="weight_20ml">20 ml</string>
    <string name="weight_25ml">25 ml</string>
    <string name="weight_50ml">50 ml</string>
    <string name="weight_100ml">100 ml</string>
    <string name="weight_200ml">200 ml</string>
    <string name="weight_250ml">250 ml</string>
    <string name="weight_500ml">500 ml</string>
    <string name="weight_750ml">750 ml</string>
    <string name="weight_1l">1 L</string>
    <string name="weight_2l">2 L</string>
    <string name="weight_3l">3 L</string>
    <string name="weight_4l">4 L</string>
    <string name="weight_5l">5 L</string>
    <string name="weight_10l">10 L</string>
    <string name="weight_15l">15 L</string>
    <string name="weight_20l">20 L</string>
    <string name="weight_25l">25 L</string>
    <string name="weight_50l">50 L</string>
    <string name="weight_10g_value">10</string>
    <string name="weight_20g_value">20</string>
    <string name="weight_25g_value">25</string>
    <string name="weight_50g_value">50</string>
    <string name="weight_100g_value">100</string>
    <string name="weight_200g_value">200</string>
    <string name="settings">Settings</string>
    <string name="menu_visibility">Visibility</string>
    <string name="menu_my_screen">My Store Screen</string>
    <string name="menu_inventory_update">Update Inventory</string>
    <string name="product">Product\nName</string>
    <string name="product_image">Product\nImage</string>
    <string name="product_code">Code No.</string>
    <string name="purchase_price">Purchase\nPrice</string>
    <string name="sales_price">Sales Price</string>
    <string name="stock_qty">In Stock\nQuantity</string>
    <string name="heading_category">Category</string>
    <string name="heading_sub_category">Sub\nCategory</string>
    <string name="vat_rate">VAT\nRate</string>
    <string name="unit_type">Unit\nType</string>
    <string name="campaignName">Campaign Name</string>
    <string name="campaignType">Campaign Type</string>
    <string name="campaignCode">Campaign Code</string>
    <string name="companyName">Company Name</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="sales_price_one">Sales Price1</string>
</resources>