<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/inventory_header_height"
    android:background="@drawable/productheader_border_shape"
    android:orientation="horizontal"
    tools:ignore="HardcodedText,ContentDescription" >

    <TextView
        style="@style/update_productheader_textstyle"
        android:layout_width="105dp"
        android:layout_height="match_parent"
        android:text="@string/product_image" />

    <TextView
        style="@style/update_productheader_textstyle"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:text="@string/product" />

    <TextView
        style="@style/update_productheader_textstyle"
        android:layout_width="125dp"
        android:layout_height="match_parent"
        android:text="@string/mrp" />

    <TextView
        style="@style/update_productheader_textstyle"
        android:layout_width="125dp"
        android:layout_height="match_parent"
        android:text="@string/purchase_price" />


    <TextView
        style="@style/update_productheader_textstyle"
        android:layout_width="125dp"
        android:layout_height="match_parent"
        android:text="@string/stock_qty" />

    <TextView
        style="@style/update_productheader_textstyle"
        android:layout_width="@dimen/subList_distributor_orders_width"
        android:layout_height="match_parent"
        android:text="@string/vat_rate" />

    <TextView
        style="@style/update_productheader_textstyle"
        android:layout_width="@dimen/subList_distributor_orders_width"
        android:layout_height="match_parent"
        android:text="@string/unit_type" />

    <TextView
        style="@style/update_productheader_textstyle"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:text="@string/heading_category" />

    <TextView
        style="@style/update_productheader_textstyle"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:text="@string/heading_sub_category" />

</LinearLayout>