<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/billhistory_width"
    android:layout_height="wrap_content"
    android:background="@color/header_bgcolor"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/date_textview"
        style="@style/bill_header_textstyle"
        android:layout_width="@dimen/billhistory_billdate_width"
        android:layout_height="@dimen/billhistory_billheader_height"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/small_padding"
        android:text="@string/date" />

    <TextView
        android:id="@+id/customer_textview"
        style="@style/bill_header_textstyle"
        android:layout_width="@dimen/billhistory_billcustomer_width"
        android:layout_height="@dimen/billhistory_billheader_height"
        android:gravity="center"
        android:text="@string/customer" />

    <TextView
        android:id="@+id/total_textview"
        style="@style/bill_header_textstyle"
        android:layout_width="@dimen/billhistory_billtotal_width"
        android:layout_height="@dimen/billhistory_billheader_height"
        android:gravity="center"
        android:paddingRight="@dimen/small_padding"
        android:text="@string/total_bill" />

    <TextView
        android:id="@+id/status_textview"
        style="@style/bill_header_textstyle"
        android:layout_width="@dimen/billhistory_billstatus_width"
        android:layout_height="@dimen/billhistory_billheader_height"
        android:gravity="right|center_vertical"
        android:paddingRight="@dimen/small_padding"
        android:text="@string/status" />

</LinearLayout>